Fixed spacing with home page

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -169,9 +169,7 @@ html, body {
     .home .centeredDescription {
         float: right;
         background: rgba(255, 255, 255, 0.8) fixed;
-        margin-top: 10%;
-        margin-left: 12.5%;
-        margin-right: 12.5%;
+        margin: 10vh 10vh 0;
         text-align: center;
         width: 75%;
         padding: 5%;
